@@ -50,7 +50,7 @@ main (void)
 
   test_name = g_strdup_printf ("%s: %08x", __FILE__, hash);
 
-  if (!epc_test_init ())
+  if (!epc_test_init (EPC_TEST_MASK_ALL))
     goto out;
 
   for (i = 0; i < G_N_ELEMENTS (test_types); ++i)
